2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in: Require AC_PROG_INSTALL in...
	(&scan_autoconf_files): here.

	
2001-03-05  Akim Demaille  <akim@epita.fr>

	* configure.am: New file.
	* automake.in (&file_contents): Transform CONFIGURE-AC.
	(&handle_texinfo, &handle_configure): Don't transform
	CONFIGURE_AM.
	(&handle_configure): Use `configure.am'.
	* remake-hdr.am, remake.am, texi-vers.am: Adjust to
	MAINTAINER-MODE and CONFIGURE-AC.

	
2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in (&pretty_print_internal): Don't output useless
	spaces.
	(define_pretty_variable): Don't issue the space after the `=' sign
	to avoid trailing spaces in Makefile.ins.

2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in (&generate_makefile): Call &initialize_per_input
	*before* setting $am_file_name and $in_file_name.

	
2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in ($in_file_name, $am_file_name, $relative_dirs):
	Globals, initialized...
	(&initialize_per_input): here.

2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in ($am_relative_dir): Global.
	(&initialize_per_input): Init it.
	(%make_list, @make_input_list): My them from
	(&scan_autoconf_files): here.
	(&require_file_internal): Mying changes.

2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in (%am_vars, @var_list, %def_type): Globals.
	(&initialize_per_input): Initialize them.
	(&read_main_am_file): Don't local them.
	(&get_object_extension): $objext is private.
	(&handle_single_transform_list): $lang is.
	(&handle_ltlibraries): $libname_rx is.
	(&scan_autoconf_config_files): How about actually paying attention
	to your arguments, instead of working on $_? (this is no Perl
	variable, it's a Perl variable followed by a question mark).
	(&file_contents): $contents and $separator are private.
	(&am_install_var): Declare @condvals, not $condvals.
	(%make_dirs): My.

2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in (&initialize_per_input): Move to the top.