@@ -6788,7 +6788,9 @@ sub file_contents
 		      'CK-NEWS'      => $options{'check-news'},
 
 		      'SUBDIRS'      => &variable_defined ('SUBDIRS'),
-		      'CONFIGURE-AC' => $configure_ac)
+		      'CONFIGURE-AC' => $configure_ac,
+
+		      'LIBTOOL'      => defined $configure_vars{'LIBTOOL'})
 	  # We don't need more than two consecutive new-lines.
 	  . 's/\n{3,}/\n\n/g';
 
@@ -7020,18 +7022,6 @@ sub am_primary_prefixes
 sub am_install_var
 {
     my (@args) = @_;
-
-    my $ltxform;
-    if (defined $configure_vars{'LIBTOOL'})
-    {
-	# Transform '%LIBTOOL ...%' to '$(LIBTOOL) ...'
-	$ltxform = 's/%LIBTOOL([^\%]*)%/\$(LIBTOOL) $1/g;';
-    }
-    else
-    {
-	# Delete '%LIBTOOL ...%'
-	$ltxform = 's/%LIBTOOL([^%]*)%//g;';
-    }
 
     my $cygxform;
     if (! $seen_exeext)
@@ -7269,7 +7259,6 @@ sub am_install_var
 					  'NDIR' => $nodir_name,
 					  'BASE' => $strip_subdir,
 					  'EXEC' => $exec_p)
-			      . $ltxform
 			      . $cygxform);
 	}
     }
