@@ -31,8 +31,10 @@ install-%DIR%LTLIBRARIES: $(%DIR%_LTLIBRARIES)
 ## if the program doesn't have a name that libtool expects.
 ## Use INSTALL and not INSTALL_DATA because libtool knows the right
 ## permissions to use.
-	    echo " %LIBTOOL --mode=install% $(INSTALL) $(INSTALL_STRIP_FLAG) $$p $(DESTDIR)$(%NDIR%dir)/$$p"; \
-	    %LIBTOOL --mode=install% $(INSTALL) $(INSTALL_STRIP_FLAG) $$p $(DESTDIR)$(%NDIR%dir)/$$p; \
+?LIBTOOL?	    echo " $(LIBTOOL) --mode=install $(INSTALL) $(INSTALL_STRIP_FLAG) $$p $(DESTDIR)$(%NDIR%dir)/$$p"; \
+?LIBTOOL?	    $(LIBTOOL) --mode=install $(INSTALL) $(INSTALL_STRIP_FLAG) $$p $(DESTDIR)$(%NDIR%dir)/$$p; \
+?!LIBTOOL?	    echo " $(INSTALL) $(INSTALL_STRIP_FLAG) $$p $(DESTDIR)$(%NDIR%dir)/$$p"; \
+?!LIBTOOL?	    $(INSTALL) $(INSTALL_STRIP_FLAG) $$p $(DESTDIR)$(%NDIR%dir)/$$p; \
 	  else :; fi; \
 	done
 
@@ -40,6 +42,8 @@ install-%DIR%LTLIBRARIES: $(%DIR%_LTLIBRARIES)
 uninstall-%DIR%LTLIBRARIES:
 	@$(NORMAL_UNINSTALL)
 	@list='$(%DIR%_LTLIBRARIES)'; for p in $$list; do \
-	  echo " %LIBTOOL --mode=uninstall% rm -f $(DESTDIR)$(%NDIR%dir)/$$p"; \
-	  %LIBTOOL --mode=uninstall% rm -f $(DESTDIR)$(%NDIR%dir)/$$p; \
+?LIBTOOL?	  echo " $(LIBTOOL) --mode=uninstall rm -f $(DESTDIR)$(%NDIR%dir)/$$p"; \
+?LIBTOOL?	  $(LIBTOOL) --mode=uninstall rm -f $(DESTDIR)$(%NDIR%dir)/$$p; \
+?!LIBTOOL?	  echo " rm -f $(DESTDIR)$(%NDIR%dir)/$$p"; \
+?!LIBTOOL?	  rm -f $(DESTDIR)$(%NDIR%dir)/$$p; \
 	done
