@@ -1,5 +1,12 @@
 2001-03-05  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&file_contents): Transform LIBTOOL.
+	(&am_install_var): Remove $ltxform.
+	* ltlib.am, progs.am: Adjust.
+
+	
+2001-03-05  Akim Demaille  <akim@epita.fr>
+
 	* automake.in: Require AC_PROG_INSTALL in...
 	(&scan_autoconf_files): here.
 
